@@ -65,9 +65,8 @@ ul#portal-globalnav li:last-child {
 }
 
 /* social media buttons */
-#social-media-header {
-    float: right;
-    clear: both;
+#socialmedia-fuss {
+  margin: 2em 0 0 0;
 }
 #column3 #social-media-content {
     margin: 1.3em 0 1.3em;
