@@ -40,16 +40,6 @@
 	    <a id="recensio_logo_anchor" href="/"><img src="++resource++recensio.theme.images/logo_recensio.png" alt="Recensio Logo" id="recensio_logo"/></a>
 	  </div>
 
-      <div id="social-media-header">
-          <img src="++resource++recensio.theme.images/social-media-icons.png" alt="Social Media Buttons" id="social-media-buttons-header" usemap="#socialmap-header" />
-          <map name="socialmap-header">
-              <area shape="rect" coords="0,0,30,30" alt="fb" href="https://www.facebook.com/sharer/sharer.php?u=http://www.recensio.net">
-              <area shape="rect" coords="30,0,60,30" alt="twitter" href="http://twitter.com/home?status=http://www.recensio.net">
-              <area shape="rect" coords="60,0,90,30" alt="twitter" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://www.recensio.net">
-              <area shape="rect" coords="90,0,120,30" alt="twitter" href="https://plus.google.com/share?url=http://www.recensio.net">
-          </map>
-      </div>
-
 	  <div id="navigation">
 	    <ul>
 		  <li class="navFirst_element"><a href="#">Rezensionen</a></li>
@@ -94,8 +84,21 @@
         <div id="viewlet-below-content" />
 
         <div id="clear-after-viewlets" class="clear"></div>
+
+        <div id="socialmedia-fuss">
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.recensio.net" title="'recensio.net' auf Facebook teilen" target="_blank">
+            <img src="++resource++recensio.theme.images/socialmedia_fuss/fb_fuss.jpg" alt="facebook" width="42px" height="36px" /></a>
+          <a href="http://twitter.com/home?status=https://www.recensio.net" title="'recensio.net' auf Twitter teilen" target="_blank">
+            <img alt="Twitter" src="++resource++recensio.theme.images/socialmedia_fuss/twitter_fuss.jpg" width="55px" height="36px" /></a>
+          <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.recensio.net" title="'recensio.net' auf linkedin teilen" target="_blank">
+            <img alt="linkedin" src="++resource++recensio.theme.images/socialmedia_fuss/linkedin_fuss.jpg"  width="53px" height="36px" /></a>
+          <a href="https://plus.google.com/share?url=https://www.recensio.net" title="'recensio.net' auf Google+ teilen" target="_blank">
+            <img alt="google plus" src="++resource++recensio.theme.images/socialmedia_fuss/google_fuss.jpg" alt="google plus" width="54px" height="36px" /></a>
+        </div>
+
         <div class="bl"/>
         <div class="br"/>
+
       </div>
 
       <!-- <div id="postit"> -->
